[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.4"

async-trait = "0.1"

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rpassword = "7"

russh = "0.36"
russh-keys = "0.24"
futures = "0.3"
watchexec = "2"
miette = "5.5.0"
async-priority-channel = "0.1"
